syntax = "proto3";
option go_package = "github.com/yubo/falcon/backend";
package backend;

import "google/api/annotations.proto";
import "falcon.proto";

service Backend {
	rpc Update(falcon.UpdateRequest) returns (falcon.UpdateResponse) {
		option (google.api.http) = {
			post: "/v1/backend/update"
			body: "*"
		};
	}

	rpc Get(falcon.GetRequest) returns (falcon.GetResponse) {
		option (google.api.http) = {
			post: "/v1/backend/get"
			body: "*"
		};
	}

	rpc GetRrd(falcon.GetRrdRequest) returns (falcon.GetRrdResponse) {
		option (google.api.http) = {
			post: "/v1/backend/getrrd"
			body: "*"
		};
	}
}

